--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "jest",
     "tdd": "jest --watchAll",
     "setup": "node ./setup.js",
+    "readme": "node ./update-readme.js",
     "bench": "node ./bench.js",
     "format": "prettier . --write --ignore-unknown"
   },
@@ -41,6 +42,7 @@
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
+    "cheerio": "1.0.0-rc.12",
     "cli-table": "^0.3.11",
     "jest": "^29.3.1",
     "prettier": "^2.8.0",
