--- a/package.json
+++ b/package.json
@@ -48,5 +48,8 @@
     "prettier": "^2.8.0",
     "pretty-ms": "^8.0.0",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "date-fns": "^2.30.0"
   }
 }
