--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "cheerio": "1.0.0-rc.12",
     "cli-table": "^0.3.11",
     "jest": "^29.3.1",
+    "mitata": "^0.1.6",
     "prettier": "^2.8.0",
     "pretty-ms": "^8.0.0",
     "typescript": "^4.9.3"
