--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@swc/jest": "^0.2.23",
     "@types/jest": "^29.2.3",
     "@types/node": "^18.11.9",
+    "bun-types": "^1.0.15",
     "cheerio": "1.0.0-rc.12",
     "cli-table": "^0.3.11",
     "jest": "^29.3.1",
