--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "bun-types": "^1.0.15",
     "cheerio": "1.0.0-rc.12",
     "cli-table": "^0.3.11",
-    "jest": "^29.7.0",
+    "jest": "30.0.0-alpha.2",
     "mitata": "^0.1.6",
     "prettier": "^3.1.0",
     "pretty-ms": "^8.0.0",
