--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     }
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.0",
     "@swc/core": "^1.3.100",
     "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.11",
