--- a/src/2019/package.json
+++ b/src/2019/package.json
@@ -7,8 +7,7 @@
   "scripts": {
     "test": "vitest run",
     "tdd": "vitest",
-    "bench": "node ../../bench.js",
-    "format": "prettier . --write --ignore-unknown"
+    "bench": "node ../../bench.js"
   },
   "dependencies": {
     "lodash": "^4.17.21"
