--- a/templates/year/package.json
+++ b/templates/year/package.json
@@ -7,7 +7,6 @@
   "scripts": {
     "test": "vitest run",
     "tdd": "vitest",
-    "bench": "node ../../bench.js",
-    "format": "prettier . --write --ignore-unknown"
+    "bench": "node ../../bench.js"
   }
 }
