allow unused template literals
Used in snapshot testing

--- a/biome.json
+++ b/biome.json
@@ -20,7 +20,8 @@
     "rules": {
       "style": {
         "useConst": "off",
-        "noParameterAssign": "off"
+        "noParameterAssign": "off",
+        "noUnusedTemplateLiteral": "off"
       },
       "nursery": {
         "useSortedClasses": "warn"
