add 2019 — day 18 (wip)

--- a/src/2019/package.json
+++ b/src/2019/package.json
@@ -10,6 +10,7 @@
     "bench": "node ../../bench.js"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "aoc-utils": "workspace:*"
   }
 }
