--- a/package.json
+++ b/package.json
@@ -16,16 +16,16 @@
   "author": "Robin Malfait <malfait.robin@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@biomejs/biome": "1.9.4",
-    "@types/node": "^22.10.1",
-    "bun-types": "^1.1.38",
-    "cheerio": "1.0.0-rc.12",
+    "@biomejs/biome": "2.3.8",
+    "@types/node": "^24.10.1",
+    "bun-types": "^1.3.3",
+    "cheerio": "1.1.2",
     "cli-table": "^0.3.11",
-    "mitata": "^1.0.20",
-    "prettier": "^3.4.2",
-    "pretty-ms": "^9.2.0",
-    "typescript": "^5.7.2",
-    "vitest": "^2.1.8"
+    "mitata": "^1.0.34",
+    "prettier": "^3.7.3",
+    "pretty-ms": "^9.3.0",
+    "typescript": "^5.9.3",
+    "vitest": "^4.0.14"
   },
   "dependencies": {
     "date-fns": "^4.1.0"
