--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "test": "vitest run --test-timeout 300000",
-    "tdd": "vitest --test-timeout 300000",
+    "test": "vitest run --test-timeout 300000 --bail 1",
+    "tdd": "vitest --test-timeout 300000 --bail 1",
     "setup": "node ./setup.js",
     "readme": "node ./update-readme.js",
     "bench": "node ./bench.js",
